adjust min map zoom level

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ const MAP = new mapboxgl.Map({
   container: 'map',
   style: 'mapbox://styles/danjford/cjdanyxn35c9j2spkshl6ww1z',
   minZoom: 11,
+  minZoom: 9,
   zoom: 12,
   center: [-75.165367, 39.937921],
   bearing: 8.80,
