--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 
     <!-- Font Awesome icon library -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
+    <!-- jQuery -->
+    <script
+        src="http://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
+    <!-- Local JSON files -->
+    <script>
+        $.getJSON('data/philly-bars-rest.geojson', function(data){
+            window.barRestaurantGeoJSON = data;
+        });
+    </script>
 </head>
 <body>
     <div class="grid">
@@ -80,6 +93,10 @@
             <div>
                 <a href="#" id="find-me" class="btn btn-light-green">Find Me</a>
             </div>
+            <div>
+                <button id="find-nearest-eatery" class="btn btn-light-green">
+                    Find Nearest Eatery
+                </button>
             <div>
                 <a href="#" id="mobile-info" class="btn btn-green">More Info</a>
             </div>
@@ -134,19 +151,59 @@ const DATA_SOURCES = {
 const POPUP = new mapboxgl.Popup ({
     closeButton: true,
     closeOnClick: false
+ });
+
+let eateryButtonActive = false;
+
+const geolocateControl = new mapboxgl.GeolocateControl({
+     positionOptions: {
+         enableHighAccuracy: true,
+     },
+     trackUserLocation: false,
 });
 
-MAP.addControl(new mapboxgl.GeolocateControl({
-    positionOptions: {
-        enableHighAccuracy: true
-    },
-    trackUserLocation: true
-}));
+geolocateControl.on('geolocate', ev => {
+     if (eateryButtonActive) {
+         const data = {
+             type: 'Point',
+             coordinates: [
+                 ev.coords.longitude,
+                 ev.coords.latitude,
+             ],
+         };
+
+         const nearest = window.barRestaurantGeoJSON.features.map(feature =>
+             [
+                 turf.distance(data, feature),
+                 feature,
+             ]);
+
+         const sortedNearest = nearest.sort((first, second) => {
+             if (first[0] > second[0]) {
+                 return 1;
+             } else if (second[0] > first[0]) {
+                 return -1;
+             }
+
+             return 0;
+         });
+
+         const nearestEatery = sortedNearest[0];
+        console.log(nearestEatery[1]);
+        eateryButtonActive = false;
+     }
+ });
+
+document.getElementById("find-nearest-eatery").onclick = (e) => {
+   eateryButtonActive = true;
+   geolocateControl._onClickGeolocate(e);
+};
+
+MAP.addControl(geolocateControl);
 
 MAP.addControl(new mapboxgl.NavigationControl());
 
 MAP.on('load', function () {
-
     MAP.addSource('parade-route', {
         type: 'vector',
         url: DATA_SOURCES.paradeRoute
