--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!--  Taking a cue from @laurenancona, force https -->
-    <script type="text/javascript">
-        var host = "eaglessuperbowlparade.com";
-        if ((host == window.location.host) && (window.location.protocol != "https:"))
-          window.location.protocol = "https";
-    </script>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,13 +24,13 @@
 
     <!-- jQuery -->
     <script
-        src="http://code.jquery.com/jquery-3.3.1.min.js"
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 
     <!-- Local JSON files -->
     <script>
-        $.getJSON('data/philly-bars-rest.geojson', function(data){
+        $.getJSON('data/bars.geojson', function(data){
             window.barRestaurantGeoJSON = data;
         });
     </script>
@@ -59,10 +52,10 @@
         <!-- Sidebar -->
         <sidebar>
             <div>
-                <h4><center>Click the button to find the nearest bar or restaurant!<center></h4>
+                <h4><center>Click the button to find the nearest bar or restaurant along the parade route!<center></h4>
             </div>
             <div>
-                <a href="#" id="find-me" class="btn btn-light-green">Get Closest Beer!</a>
+                <a href="#" id="find-nearest-eatery-desktop" class="btn btn-light-green">Find Closest Bar</a>
             </div>
             <div class="block">
                 <h4><center>Toggle Layers</center></h4>
@@ -94,12 +87,8 @@
         <!-- Footer -->
         <div class="footer">
             <div>
-                <a href="#" id="find-me" class="btn btn-light-green">Find Me</a>
+                <a href="#" id="find-nearest-eatery-mobile" class="btn btn-light-green">Find Closest Bar</a>
             </div>
-            <div>
-                <button id="find-nearest-eatery" class="btn btn-light-green">
-                    Find Nearest Eatery
-                </button>
             <div>
                 <a href="#" id="mobile-info" class="btn btn-green">More Info</a>
             </div>
@@ -118,7 +107,7 @@
                 <h4>Record-setting game</h4>
                 <p>The <a href="http://www.philadelphiaeagles.com/">Philadelphia Eagles</a> won the 2018 Lombardi Trophy for the first time in franchise history, beating the New England Patriots with a score of 41-33 on Sunday, February 4, 2018.</p>
                 <p>Now it's time to celebrate!</p>
-                <p>Use this map to find a bar or restaurant nearest to your current location. Click the "Find Me" button to get started!</p>
+                <p>Use this map to find a bar closest to your current location. Click the "Find Closest Bar" button to get started!</p>
                 <p>Want to keep reliving those magical moments from Sunday? Check out this <a href="https://www.youtube.com/watch?v=qW1xbhW2PEE" target='_blank'>video of game highlights</a>!</p>
                 <h4>Sources</h4>
                 <p>This tool was built by:<br>
@@ -127,7 +116,7 @@
                     <a href="https://twitter.com/CRVanPollard" target='_blank'>Chris Pollard</a>
                 </p>
                 <p>The map was styled with <a href="https://www.mapbox.com/" target='_blank'>Mapbox</a> services and built using <a href="https://www.mapbox.com/mapbox-gl-js/api/" target='_blank'>Mapbox GL JS</a> and <a href="http://turfjs.org/" target='_blank'>Turf</a>.</p>
-                <p>The parade route was digitized in Mapbox Studio. Bar and restaurant information was downloaded from <a href="https://www.openstreetmap.org/" target='_blank'>OpenStreetMap</a> using <a href="https://overpass-turbo.eu/" target='_blank'>Overpass Turbo</a>. Parade details collected from <a href="http://6abc.com/sports/full-details-for-eagles-super-bowl-parade-and-ceremony/3036697/" target='_blank'>6abc</a>.</p>
+                <p>The parade route was digitized in Mapbox Studio. Bar and restaurant information was downloaded from <a href="https://www.openstreetmap.org/" target='_blank'>OpenStreetMap</a> using <a href="https://overpass-turbo.eu/" target='_blank'>Overpass Turbo</a>. Septa Transit line and station status data compiled by Chris Pollard. Parade details collected from <a href="http://6abc.com/sports/full-details-for-eagles-super-bowl-parade-and-ceremony/3036697/" target='_blank'>6abc</a>.</p>
             </div>
         </div>
     </div>
@@ -150,7 +139,7 @@ const DATA_SOURCES = {
   paradeRoute: 'mapbox://danjford.cjdam66c24ry52xnxbm8gixuv-8lrj4',
   paradeStart: 'mapbox://danjford.cjdaoair75amq33s60hdhrgft-7jrln',
   paradeEnd: 'mapbox://danjford.cjdb0bzg22m2d2qr2hwdxtxhp-37jcx',
-  phillyBarsRest: 'mapbox://danjford.cjdax71e63nqk2qrzm63oeall-4ulwn',
+  phillyBarsRest: 'mapbox://danjford.cjdax71e63nqk2qrzm63oeall-1nrcg',
   phillyTransitLines: 'mapbox://danjford.cjddntj1n01au2wm255vcypkb-2ggtb',
   phillyTransitStations: 'mapbox://danjford.cjddns0pz042t2xqoa4h3l7u3-1isol',
 };
@@ -175,9 +164,12 @@ geolocateControl.on('geolocate', ev => {
              type: 'Point',
              coordinates: [
                  ev.coords.longitude,
-                 ev.coords.latitude,
+                 ev.coords.latitude
              ],
          };
+
+         let loclong = data.coordinates[0];
+         let loclat = data.coordinates[1];
 
          const nearest = window.barRestaurantGeoJSON.features.map(feature =>
              [
@@ -196,15 +188,50 @@ geolocateControl.on('geolocate', ev => {
          });
 
          const nearestEatery = sortedNearest[0];
-        console.log(nearestEatery[1]);
-        eateryButtonActive = false;
-     }
+         console.log(nearestEatery[1]);
+         eateryButtonActive = false;
+
+         if (nearestEatery[1] !== null) {
+
+         MAP.getSource('nearest-eatery').setData({
+             type: 'FeatureCollection',
+             features: [
+                 nearestEatery[1]
+             ]
+            }
+         );
+
+         MAP.addLayer({
+             id: 'nearest-eatery',
+             type: 'circle',
+             source: 'nearest-eatery',
+             paint: {
+                 'circle-stroke-color' : '#fff',
+                 'circle-stroke-width': 2,
+                 'circle-radius': 12,
+                 'circle-color': '#9d01ff'
+                }
+            });
+          }
+
+          let nearestBbox = turf.bbox(data, nearestEatery);
+
+          MAP.fitBounds([
+            [nearestBbox[0], nearestBbox[1]],
+            [nearestBbox[2], nearestBbox[3]]
+          ], {
+            padding: 100
+          });
+      }
  });
 
-document.getElementById("find-nearest-eatery").onclick = (e) => {
-   eateryButtonActive = true;
-   geolocateControl._onClickGeolocate(e);
+var onEateryClick = function(e) {
+    eateryButtonActive = true;
+    geolocateControl._onClickGeolocate(e);
 };
+
+document.getElementById("find-nearest-eatery-desktop").onclick = onEateryClick;
+document.getElementById("find-nearest-eatery-mobile").onclick = onEateryClick;
 
 MAP.addControl(geolocateControl);
 
@@ -243,6 +270,8 @@ MAP.on('load', function () {
             "visibility": "visible",
         },
         'paint': {
+            'circle-stroke-color' : '#fff',
+            'circle-stroke-width': 2,
             'circle-radius': {
                 'base': 1.75,
                 'stops': [[12, 8], [22, 180]]
@@ -264,6 +293,8 @@ MAP.on('load', function () {
             "visibility": "visible"
         },
         'paint': {
+            'circle-stroke-color' : '#fff',
+            'circle-stroke-width': 2,
             'circle-radius': {
                 'base': 1.75,
                 'stops': [[12, 8], [22, 180]]
@@ -304,6 +335,8 @@ MAP.on('load', function () {
             "visibility": "visible"
         },
         'paint': {
+            'circle-stroke-color' : '#fff',
+            'circle-stroke-width': 1,
             'circle-radius': {
                 'base': 1.75,
                 'stops': [[12, 5], [22, 60]]
@@ -325,27 +358,16 @@ MAP.on('load', function () {
     MAP.addLayer({
         "id": "philly-bars-rest",
         "source": "philly-bars-rest",
-        "source-layer": "philly-bars-rest",
-        "type": "circle",
+        "source-layer": "philly-bars",
+        "type": "symbol",
         "layout": {
-            "visibility": "visible"
+            "visibility": "visible",
+            "icon-image": "beer-15"
         },
-        'paint': {
-            'circle-radius': {
-                'base': 1.75,
-                'stops': [[12, 5], [22, 60]]
-            },
-            'circle-color': [
-                'match',
-                ['get', 'amenity'],
-                'restaurant', '#0091a1',
-                'bar', '#f4b400',
-                /* other */ '#ccc'
-            ]
-        }
+        'paint': {}
     });
 
-    MAP.addSource('nearest-bar', {
+    MAP.addSource('nearest-eatery', {
         type: 'geojson',
         data: {
             type: 'FeatureCollection',
@@ -354,8 +376,9 @@ MAP.on('load', function () {
         }
     });
 
+    // TODO: refactor popup section
     // enable POPUP
-    MAP.on('click', function(e) {
+    MAP.on('click', 'philly-bars-rest', function(e) {
       POPUP.remove();
         let features = MAP.queryRenderedFeatures(e.point, { layers: ['philly-bars-rest'] });
         if (!features.length) {
@@ -370,13 +393,16 @@ MAP.on('load', function () {
         POPUP.addTo(MAP);
     });
 
-    MAP.on('mousemove', function(e) {
-        let features = MAP.queryRenderedFeatures(e.point, { layers: ['philly-bars-rest']});
+    MAP.on('mouseenter', 'philly-bars-rest', function(e) {
+        let features = MAP.queryRenderedFeatures(e.point, { layers: ['philly-bars-rest'] });
         MAP.getCanvas().style.cursor = features.length ? 'pointer' : '';
     });
 
-    // enable POPUP
-    MAP.on('click', function(e) {
+    MAP.on('mouseleave', 'philly-bars-rest', function(e) {
+        MAP.getCanvas().style.cursor = '';
+    });
+
+    MAP.on('click', 'philly-transit-stations', function(e) {
       POPUP.remove();
         let features = MAP.queryRenderedFeatures(e.point, { layers: ['philly-transit-stations'] });
         if (!features.length) {
@@ -392,9 +418,36 @@ MAP.on('load', function () {
         POPUP.addTo(MAP);
     });
 
-    MAP.on('mousemove', function(e) {
+    MAP.on('mouseenter', 'philly-transit-stations', function(e) {
         let features = MAP.queryRenderedFeatures(e.point, { layers: ['philly-transit-stations'] });
         MAP.getCanvas().style.cursor = features.length ? 'pointer' : '';
+    });
+
+    MAP.on('mouseleave', 'philly-transit-stations', function(e) {
+        MAP.getCanvas().style.cursor = '';
+    });
+
+    MAP.on('mouseover', 'parade-route', function(e) {
+      POPUP.remove();
+        let features = MAP.queryRenderedFeatures(e.point, { layers: ['parade-route'] });
+        if (!features.length) {
+          return;
+        }
+        let feature = features[0];
+
+        POPUP.setLngLat(e.lngLat);
+        POPUP.setHTML('<div id=\'popup\' class=\'popup\' style=\'z-index: 10;\'><strong>' + "Parade Route" + '</strong></div>');
+        POPUP.addTo(MAP);
+    });
+
+    MAP.on('mouseenter', 'parade-route', function(e) {
+        let features = MAP.queryRenderedFeatures(e.point, { layers: ['parade-route'] });
+        MAP.getCanvas().style.cursor = features.length ? 'pointer' : '';
+    });
+
+    MAP.on('mouseleave', 'parade-route', function(e) {
+        MAP.getCanvas().style.cursor = '';
+        POPUP.remove();
     });
 
     // toggle layers
