--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Eagles Super Bowl LII Victory Parade Map">
-    <title>Eagles Super Bowl LII Victory Parade Map</title>
-    <link rel="shortcut icon" href="images/football.png">
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+
+    <!-- Site info -->
+    <title>Eagles Super Bowl LII Victory Parade Map</title>
+    <meta name="description" content="Find the nearest bar and explore map of parade day transit info.">
+    <meta name="author" content="Dan Ford">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/football.png">
+
+    <!-- Metatags -->
+    <meta property="og:title" content="Eagles Super Bowl LII Victory Parade Map" />
+    <meta property="og:url" content="eaglessuperbowlparade.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Find the nearest bar and explore map of parade day transit info." />
+    <meta property="og:image" content="images/eagles-parade-map.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Eagles Super Bowl LII Victory Parade Map" />
+    <meta name="tiwtter:creator" content="@danjford" />
+    <meta name="twitter:description" content="Find the nearest bar and explore map of parade day transit info." />
+    <meta name="twitter:url" content="eaglessuperbowlparade.com" />
+    <meta property="og:image" content="images/eagles-parade-map.png" />
 
     <!-- Main stylesheet -->
     <link rel="stylesheet" href="css/main.css" />
