--- a/index.html
+++ b/index.html
@@ -233,15 +233,31 @@ geolocateControl.on('geolocate', ev => {
             });
           }
 
-          let nearestBbox = turf.bbox(data, nearestEatery);
+          const sortedLons = [data.coordinates[0], nearestEatery[1].geometry.coordinates[0]].sort((a, b) => {
+              if (a > b) {
+                  return 1;
+              } else if (a.distance < b.distance) {
+                  return -1;
+              }
+              return 0;
+          });
+
+          const sortedLats = [data.coordinates[1], nearestEatery[1].geometry.coordinates[1]].sort((a, b) => {
+              if (a > b) {
+                  return 1;
+              } else if (a.distance < b.distance) {
+                  return -1;
+              }
+              return 0;
+          });
 
           MAP.fitBounds([
-            [nearestBbox[0], nearestBbox[1]],
-            [nearestBbox[2], nearestBbox[3]]
-          ], {
-            padding: 100
-          });
-      }
+              [sortedLons[0], sortedLats[0]],
+              [sortedLons[1], sortedLats[1]],
+           ], {
+             padding: 100,
+           });
+       }
  });
 
 var onEateryClick = function(e) {
